<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.store.StoreActivity">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="vertical"
            android:background="@drawable/background">

            <TextView
                android:id="@+id/txtOla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:layout_marginStart="20dp"
                android:text="Olá, Fulano da Silva"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="61dp"
                tools:layout_editor_absoluteY="77dp" />
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="15dp"
                android:background="@color/background"
                android:layout_marginTop="5dp"
               >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Acumulado R$"
                    android:paddingStart="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/hint"/>

                <TextView
                    android:id="@+id/txtWalletView"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2"
                    android:text="0.00"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtWalletNotView"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-160dp"
                    android:layout_weight="2"
                    android:text="---"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />
                <ImageView
                    android:id="@+id/btnViewValue"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    app:srcCompat="@drawable/ic_visibility"
                    android:paddingEnd="25dp"
                    android:contentDescription="Visualizar" />

            </LinearLayout>
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:layout_marginStart="20dp"
                android:text="@string/title_preference"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:layout_editor_absoluteX="61dp"
                tools:layout_editor_absoluteY="77dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/res_item_preference" />


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="mais"
        app:backgroundTint="@color/orange"
        android:elevation="5dp"
        app:layout_anchor="@id/background"
        app:layout_anchorGravity="bottom|end|right"
        android:src="@drawable/ic_add"
        android:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/btnMenu"
        app:layout_anchorGravity="center|top"
        android:layout_marginBottom="90dp"
        android:contentDescription="adicionar"
        android:src="@drawable/ic_edit"
        app:backgroundTint="@color/orange_700"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/btnAdd"
        app:layout_anchorGravity="center|top"
        android:layout_marginBottom="150dp"
        android:src="@drawable/ic_exit"
        app:backgroundTint="@color/orange_700"
        android:contentDescription="sair"
        android:visibility="invisible" />

    <com.fiap.wallet.ui.shared.LoadingView
        android:id="@+id/loading_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:visible="false"
        android:layout_height="match_parent" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>