<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.storeAdd.StoreAddActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="vertical"
            android:background="@drawable/background">

            <Button
                android:id="@+id/btnClose"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/orange"
                android:elevation="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="back"
                android:text="Voltar"
                app:backgroundTint="@color/orange"
                app:icon="@drawable/ic_west"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="125dp"
                android:layout_marginStart="20dp"
                android:text="Selecione suas lojas favoritas"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@id/header"
                tools:layout_editor_absoluteX="61dp"
                tools:layout_editor_absoluteY="77dp" />

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom|center"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            android:background="@drawable/ic_rounded_corner"
            app:searchIcon="@drawable/ic_search"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="258dp" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="258dp" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:cardCornerRadius="22dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation ="16sp"
        android:visibility="gone"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constLayout"
            android:background="@color/white"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:strokeColor="@color/purple_200"
                app:strokeWidth="1dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:elevation="2dp"
                app:cardBackgroundColor="#b1bfca"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:padding="0dp"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="logo" />

                <TextView
                    android:id="@+id/txtStore"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Nome da Loja"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="29sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/logo"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtPercent"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="99%"
                    android:layout_gravity="center_vertical|right"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintStart_toEndOf="@+id/txtStore"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/orange"
                android:elevation="5dp"
                android:onClick="cancel"
                android:text="cancelar"
                app:backgroundTint="@color/orange"
                app:icon="@drawable/ic_clear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnAddStore"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/orange"
                android:elevation="5dp"
                android:onClick="addStore"
                android:text="Adicionar"
                app:backgroundTint="@color/orange"
                app:icon="@drawable/ic_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.fiap.wallet.ui.shared.LoadingView
        android:id="@+id/loading_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:visible="false"
        android:layout_height="match_parent" />


</androidx.constraintlayout.widget.ConstraintLayout>