...
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end|right"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_baseline_clear_24"
...
